add client flags (without tinkering)